; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_aspect.c_calc_margin.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_aspect.c_calc_margin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float*, i32*, i32)* @calc_margin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @calc_margin(float* %0, i32* %1, i32 %2) #0 {
  %4 = alloca float*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store float* %0, float** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load float*, float** %4, align 8
  %8 = getelementptr inbounds float, float* %7, i64 0
  %9 = load float, float* %8, align 4
  %10 = load i32, i32* %6, align 4
  %11 = sitofp i32 %10 to float
  %12 = fmul float %9, %11
  %13 = fptosi float %12 to i32
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @MPCLAMP(i32 %13, i32 0, i32 %14)
  %16 = load i32*, i32** %5, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  store i32 %15, i32* %17, align 4
  %18 = load float*, float** %4, align 8
  %19 = getelementptr inbounds float, float* %18, i64 1
  %20 = load float, float* %19, align 4
  %21 = load i32, i32* %6, align 4
  %22 = sitofp i32 %21 to float
  %23 = fmul float %20, %22
  %24 = fptosi float %23 to i32
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @MPCLAMP(i32 %24, i32 0, i32 %25)
  %27 = load i32*, i32** %5, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 1
  store i32 %26, i32* %28, align 4
  %29 = load i32*, i32** %5, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32*, i32** %5, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 1
  %34 = load i32, i32* %33, align 4
  %35 = add nsw i32 %31, %34
  %36 = load i32, i32* %6, align 4
  %37 = icmp sge i32 %35, %36
  br i1 %37, label %38, label %46

38:                                               ; preds = %3
  %39 = load i32*, i32** %5, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 0
  store i32 0, i32* %40, align 4
  %41 = load i32, i32* %6, align 4
  %42 = sub nsw i32 %41, 1
  %43 = call i32 @MPMAX(i32 0, i32 %42)
  %44 = load i32*, i32** %5, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 1
  store i32 %43, i32* %45, align 4
  br label %46

46:                                               ; preds = %38, %3
  ret void
}

declare dso_local i32 @MPCLAMP(i32, i32, i32) #1

declare dso_local i32 @MPMAX(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
